--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
@@ -1,17 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MovieAssistant"
              x:Class="MovieAssistant.Views.MainPage">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            
-        </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions>
+    <ContentPage Title="HomePage" Icon="baseline_home_white_24dp.png">
+        <ContentPage.Content>
+            <StackLayout>
+                <Label Text="HOME PAGE"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
+        </ContentPage.Content>
+    </ContentPage>
 
-        </Grid.RowDefinitions>
-        
-    </Grid>
+    <ContentPage Title="HistoryPage" Icon="baseline_history_white_24dp.png">
+        <ContentPage.Content>
+            <StackLayout>
+                <Label Text="HISTORY PAGE"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
+        </ContentPage.Content>
+    </ContentPage>
 
-</ContentPage>
+</TabbedPage>
