--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MovieAssistant"
+             xmlns:local="clr-namespace:MovieAssistant.Views"
              x:Class="MovieAssistant.Views.MainPage">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -11,7 +11,10 @@
         <Grid.RowDefinitions>
 
         </Grid.RowDefinitions>
+
+        <Image Source="{Binding Path=Source}"/>
         
+
     </Grid>
 
 </ContentPage>
