--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/FavouritesPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/FavouritesPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MovieAssistant.Views.HistoryPage"
-             Title="History"
-             Icon="baseline_history_white_24dp.png">
+             x:Class="MovieAssistant.Views.FavouritesPage"
+             Title="Favourites"
+             Icon="baseline_favorite_white_24dp.png">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="HISTORY PAGE"
+            <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
