--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
@@ -1,12 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MovieAssistant.Views.HomePage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="HOME"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+             xmlns:viewModels="clr-namespace:MovieAssistant.ViewModels"
+             xmlns:carousel="clr-namespace:Syncfusion.SfCarousel.XForms;assembly=Syncfusion.SfCarousel.XForms"
+             x:Class="MovieAssistant.Views.HomePage"
+             Title="Home"
+             Icon="baseline_home_white_24dp.png"
+             BackgroundColor="Black">
+
+    <ContentPage.BindingContext>
+        <viewModels:HomeViewModel/>
+    </ContentPage.BindingContext>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+
+        <StackLayout Padding="30,20"
+                     Grid.Row="0">
+            <Label TextColor="#ED2222" FontSize="Title"
+                   Text="Tailored for your taste.&#10;Keeping up with your mood."/>
+            <Label TextColor="White" FontSize="Subtitle"
+                   Text="Movies &amp; TV Shows&#10;Recommendations"/>
         </StackLayout>
-    </ContentPage.Content>
+
+        <StackLayout Grid.Row="1">
+            <carousel:SfCarousel x:Name="carousel"/>
+        </StackLayout>
+    </Grid>
 </ContentPage>
