--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MovieAssistant.ViewModels"
-             xmlns:carousel="clr-namespace:Syncfusion.SfCarousel.XForms;assembly=Syncfusion.SfCarousel.XForms"
+             xmlns:controls="clr-namespace:PanCardView.Controls;assembly=PanCardView"
+             xmlns:cards="clr-namespace:PanCardView;assembly=PanCardView"
+             xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="MovieAssistant.Views.HomePage"
              Title="Home"
              Icon="baseline_home_white_24dp.png"
@@ -28,7 +30,31 @@
         </StackLayout>
 
         <StackLayout Grid.Row="1">
-            <carousel:SfCarousel x:Name="carousel"/>
+            <cards:CarouselView
+            ItemsSource="{Binding Images}"
+            SlideShowDuration="4000">
+                <cards:CarouselView.ItemTemplate>
+                    <DataTemplate>
+                        <ContentView>
+                            <Frame
+                            VerticalOptions="Center"
+                            HorizontalOptions="Center"
+                            HeightRequest="268"
+                            WidthRequest="182"
+                            Padding="0"
+                            HasShadow="False"
+                            IsClippedToBounds="True">
+
+                                <ffimage:CachedImage Source="{Binding Source}"/>
+                            </Frame>
+                        </ContentView>
+                    </DataTemplate>
+                </cards:CarouselView.ItemTemplate>
+
+                <controls:IndicatorsControl/>
+                <controls:LeftArrowControl/>
+                <controls:RightArrowControl/>
+            </cards:CarouselView>
         </StackLayout>
     </Grid>
 </ContentPage>
