--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/MainPage.xaml
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MovieAssistant.Views"
-             x:Class="MovieAssistant.Views.MainPage">
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:local="clr-namespace:MovieAssistant.Views"
+            x:Class="MovieAssistant.Views.MainPage"
+            BarBackgroundColor="White"
+            BackgroundColor="White">
 
-</ContentPage>
+    <local:HomePage></local:HomePage>
+    <local:QuestionsPage></local:QuestionsPage>
+    <local:HistoryPage></local:HistoryPage>
+</TabbedPage>
