--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/QuestionsPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/QuestionsPage.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage  xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:MovieAssistant.ViewModel"
              x:Class="MovieAssistant.Views.QuestionsPage"
-             Title="Questions"
-             Icon="outline_question_answer_black_24dp.png">
+             Title="Questions">
 
     <ContentPage.BindingContext>
         <viewModel:QuestionsViewModel/>
@@ -42,6 +41,5 @@
                 TextColor="White"
                 Margin="30"
                 Command="{Binding RunEngineCommand}"/>
-
     </Grid>
 </ContentPage>
