--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/QuestionsPage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/QuestionsPage.xaml
@@ -3,43 +3,97 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:MovieAssistant.ViewModel"
              x:Class="MovieAssistant.Views.QuestionsPage"
-             Title="Questions">
+             Title="Questions"
+             Icon="outline_question_answer_black_24dp.png">
 
     <ContentPage.BindingContext>
         <viewModel:QuestionsViewModel/>
     </ContentPage.BindingContext>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <ScrollView>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="350"/>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
 
-        <Label Grid.Row="0"  
+            <Label Grid.Row="0"  
                Text="{Binding Question.QuestionText}"
                FontSize="Large"
                VerticalOptions="CenterAndExpand" 
                HorizontalOptions="CenterAndExpand" />
 
-        <ListView Grid.Row="1" ItemsSource="{Binding Question.Answers}" SelectionMode="None" VerticalOptions="CenterAndExpand">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout>
-                            <RadioButton Content="{Binding AnswerText}" HorizontalOptions="StartAndExpand" 
+            <ListView Grid.Row="1" ItemsSource="{Binding Question.Answers}" SelectionMode="None" VerticalOptions="CenterAndExpand">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <RadioButton Content="{Binding AnswerText}" HorizontalOptions="StartAndExpand" 
                                          GroupName="Answers" IsChecked="{Binding IsChecked}"/>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-        <Button Grid.Row="2" Text="Next"
+            <Button Grid.Row="2" Text="Next"
                 FontSize="Large"
                 BackgroundColor="#FF6347"
                 TextColor="White"
                 Margin="30"
                 Command="{Binding RunEngineCommand}"/>
-    </Grid>
+
+            <ListView x:Name="MyListView"
+                        ItemsSource="{Binding Movies}"
+                        CachingStrategy="RecycleElement"
+                        RowHeight="350"
+                        Grid.Row="3">
+
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame IsClippedToBounds="True" HasShadow="True" Padding="0" BackgroundColor="White" >
+                                <Frame.Margin>
+                                    <OnPlatform x:TypeArguments="Thickness" Android="10" iOS="10" />
+                                </Frame.Margin>
+                                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                                    <Frame HorizontalOptions="FillAndExpand" Margin="0,0,0,0" HasShadow="False" Padding="0"  >
+                                        <Grid VerticalOptions="CenterAndExpand" HorizontalOptions="Start" Padding="0" Margin="0,0,0,0"  BackgroundColor="Transparent">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <StackLayout Grid.Row="0" Grid.Column="0" VerticalOptions="CenterAndExpand" Margin="0,0,0,0">
+                                                <Frame HasShadow="False">
+                                                    <Image Source="{Binding Image}" Aspect="AspectFit"  WidthRequest="182" HeightRequest="268" />
+                                                </Frame>
+                                            </StackLayout>
+                                            <StackLayout Grid.Row="0" Grid.Column="1" Padding="0"  Orientation="Vertical" VerticalOptions="CenterAndExpand">
+                                                <StackLayout Orientation="Horizontal" >
+                                                    <Label Text="{Binding Title}" TextColor="#222" FontSize = "25" VerticalOptions="CenterAndExpand"/>
+                                                </StackLayout>
+                                                <StackLayout Orientation="Horizontal">
+                                                    <Label Text="Duration: " FontSize = "14" VerticalOptions="CenterAndExpand"/>
+                                                    <Label Text="{Binding Duration}" FontSize = "16"/>
+                                                </StackLayout>
+                                                <StackLayout Orientation="Horizontal">
+                                                    <Label Text="Release Year: " FontSize = "14" VerticalOptions="CenterAndExpand"/>
+                                                    <Label Text="{Binding Year}" FontSize = "14"/>
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </Grid>
+                                    </Frame>
+                                </StackLayout>
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+    </ScrollView>
 </ContentPage>
