--- a/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/Views/HomePage.xaml
@@ -14,32 +14,32 @@
         <viewModel:HomeViewModel/>
     </ContentPage.BindingContext>
 
-    <ScrollView>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="3*"/>
-                <!--<RowDefinition Height="*"/>-->
-            </Grid.RowDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="3*"/>
+        </Grid.RowDefinitions>
 
-            <StackLayout Grid.Row="0">
-                <Image Source="logo.png"/>
-            </StackLayout>
+        <StackLayout Grid.Row="0">
+            <Image Source="logo.png"/>
+        </StackLayout>
 
-            <StackLayout Padding="30,20"
+        <StackLayout Padding="30,20"
                      Grid.Row="1"
                      BackgroundColor="#FF6347">
-                <Label TextColor="White" FontSize="Title"
+            <Label TextColor="White" FontSize="Title"
                    Text="Tailored for your taste.&#10;Keeping up with your mood."/>
-                <Label TextColor="White" FontSize="Subtitle"
+            <Label TextColor="White" FontSize="Subtitle"
                    Text="Movies &amp; TV Shows&#10;Recommendations"/>
-                <cards:CarouselView
+
+            <cards:CarouselView
                     ItemsSource="{Binding Images}"
-                    SlideShowDuration="4000">
-                    <cards:CarouselView.ItemTemplate>
-                        <DataTemplate>
-                            <ContentView>
-                                <Frame
+                    SlideShowDuration="4000"
+                    Margin="0,50,0,0">
+                <cards:CarouselView.ItemTemplate>
+                    <DataTemplate>
+                        <ContentView>
+                            <Frame
                                 VerticalOptions="Center"
                                 HorizontalOptions="Center"
                                 HeightRequest="268"
@@ -47,45 +47,16 @@
                                 Padding="0"
                                 HasShadow="False"
                                 IsClippedToBounds="True">
-                                    <ffimage:CachedImage Source="{Binding}"/>
-                                </Frame>
-                            </ContentView>
-                        </DataTemplate>
-                    </cards:CarouselView.ItemTemplate>
+                                <ffimage:CachedImage Source="{Binding}"/>
+                            </Frame>
+                        </ContentView>
+                    </DataTemplate>
+                </cards:CarouselView.ItemTemplate>
 
-                    <controls:IndicatorsControl/>
-                    <controls:LeftArrowControl/>
-                    <controls:RightArrowControl/>
-                </cards:CarouselView>
-            </StackLayout>
-
-            <!--<StackLayout Grid.Row="2">
-                <cards:CarouselView
-            ItemsSource="{Binding Images}"
-            SlideShowDuration="4000">
-                    <cards:CarouselView.ItemTemplate>
-                        <DataTemplate>
-                            <ContentView>
-                                <Frame
-                            VerticalOptions="Center"
-                            HorizontalOptions="Center"
-                            HeightRequest="268"
-                            WidthRequest="182"
-                            Padding="0"
-                            HasShadow="False"
-                            IsClippedToBounds="True">
-
-                                    <ffimage:CachedImage Source="{Binding Source}"/>
-                                </Frame>
-                            </ContentView>
-                        </DataTemplate>
-                    </cards:CarouselView.ItemTemplate>
-
-                    <controls:IndicatorsControl/>
-                    <controls:LeftArrowControl/>
-                    <controls:RightArrowControl/>
-                </cards:CarouselView>
-            </StackLayout>-->
-        </Grid>
-    </ScrollView>
+                <controls:IndicatorsControl/>
+                <controls:LeftArrowControl/>
+                <controls:RightArrowControl/>
+            </cards:CarouselView>
+        </StackLayout>
+    </Grid>
 </ContentPage>
